dashboard align problem solve

--- a/src/css/dashboard/Main.module.css
+++ b/src/css/dashboard/Main.module.css
@@ -45,7 +45,7 @@ h1 {
 
 .sidebarSection {
   order: 1;
-  width: 16%;
+  width: 21%;
   display: flex;
   flex-direction: column;
 }
